# ocaml-secret-sharing

./: .merlin  .travis.yml  _tags  gF128.ml  gF256.ml  gF256.mli  secret-sharing.opam  share.ml  share.mli  test.ml
qcheck/: jbuild  test.ml
src/: gf2n.ml  gf2n.mli  jbuild  share.ml  share.mli
test/: jbuild  test.ml
