opam-version: "1.2"
maintainer: "Reynir Björnsson <reynir@reynir.dk>"
author: "Reynir Björnsson <reynir@reynir.dk>"
dev-repo: "https://github.com/reynir/ocaml-secret-sharing.git"
homepage: "https://github.com/reynir/ocaml-secret-sharing"
bug-reports: "https://github.com/reynir/ocaml-secret-sharing/issues/"
license: "BSD-2-clause"
build: ["jbuilder" "build" "-p" name]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
  "nocrypto"
  "zarith"
  "cstruct" {test}
]
